refactor: replace Map.of with Collections.singletonMap to ensure compatibility and add PostConstruct import